# Optflow

./: README  README.md
optflow/: CMakeLists.txt  README  README.md
optflow/lib/: CImg_config.h  CMakeLists.txt  DenseImageExtrapolator.h  DenseImageMorpher.cpp  DenseImageMorpher.h  DenseMotionExtractor.h  DenseVectorFieldIO.cpp  DenseVectorFieldIO.h  DualDenseMotionExtractor.cpp  DualDenseMotionExtractor.h  ForwardDenseImageExtrapolator.h  HornSchunck.cpp  HornSchunck.h  ImageExtrapolatorDriver.cpp  ImageExtrapolatorDriver.h  ImagePyramid.cpp  ImagePyramid.h  InverseDenseImageExtrapolator.cpp  InverseDenseImageExtrapolator.h  LucasKanade.cpp  LucasKanade.h  LucasKanadeOpenCV.cpp  LucasKanadeOpenCV.h  LucasKanadeROI.cpp  LucasKanadeROI.h  MotionExtractorDriver.cpp  MotionExtractorDriver.h  PXMFileUtils.cpp  PXMFileUtils.h  Proesmans.cpp  Proesmans.h  PyramidalDenseMotionExtractor.cpp  PyramidalDenseMotionExtractor.h  PyramidalHornSchunck.cpp  PyramidalHornSchunck.h  PyramidalLucasKanade.cpp  PyramidalLucasKanade.h  PyramidalProesmans.cpp  PyramidalProesmans.h  ROI.cpp  (+13 more)
pyoptflow/: README  README.md  precipfield1.h5  rainfallmap2.h5  setup.py  test_extrapolation.py  test_interpolation.py  test_motion.py  test_pyoptflow.py
pyoptflow/pyoptflow/: algorithms.py  extrapolation.py  interpolation.py  io_utils.py  utils.py  visualization.py
pyoptflow/pyoptflow/core/: CImg_config.h  core.cpp  utils.cpp  utils.hpp
pyoptflow/pyoptflow/ext/: README
pyoptflow/pyoptflow/ext/brox/: README
pyoptflow/pyoptflow/ext/brox2/: README
pyoptflow/pyoptflow/ext/brox2_st/: README
pyoptflow/pyoptflow/ext/clg/: README
